--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "core-js": "^3.6.5",
     "node-sass": "^6.0.1",
     "telegraf": "4.0.0",
-    "video.js": "^7.15.4",
-    "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "youtube-iframe": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
