--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@vue/composition-api": "^1.7.0",
     "core-js": "^3.6.5",
     "node-sass": "^6.0.1",
+    "pinia": "^2.0.14",
     "telegraf": "4.0.0",
     "vue": "^2.6.11",
     "vuex": "^3.4.0",
